[gd_scene load_steps=2 format=2]

[ext_resource path="res://Menus/Login/Login.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_right = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -254.0
margin_top = -20.0
margin_right = 253.0
margin_bottom = 56.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UserName" type="LineEdit" parent="VBoxContainer"]
margin_right = 507.0
margin_bottom = 24.0
placeholder_text = "Username"

[node name="Password" type="LineEdit" parent="VBoxContainer"]
margin_top = 28.0
margin_right = 507.0
margin_bottom = 52.0
placeholder_text = "Password"

[node name="Login" type="Button" parent="VBoxContainer"]
margin_top = 56.0
margin_right = 507.0
margin_bottom = 96.0
rect_min_size = Vector2( 0, 40 )
text = "Login"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 100.0
margin_right = 507.0
margin_bottom = 120.0

[node name="User1" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 98.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Test User 1"

[node name="User2" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 102.0
margin_right = 200.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Test User 2"

[node name="User3" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 204.0
margin_right = 302.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Test User 3"

[node name="User4" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 306.0
margin_right = 404.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Test User 4"

[node name="User5" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 408.0
margin_right = 507.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Test User 5"
[connection signal="pressed" from="VBoxContainer/Login" to="." method="_on_Login_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/User1" to="." method="_on_User1_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/User2" to="." method="_on_User2_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/User3" to="." method="_on_User3_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/User4" to="." method="_on_User4_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/User5" to="." method="_on_User5_pressed"]
